# semantic_auto_expl

./: .gitignore  README.md
autonomous_expl/: CMakeLists.txt  Makefile  README.md  package.xml
autonomous_expl/include/autonomous_expl/: AutoExplorationApp.h  DistanceTransformer.h  FrontierExtractor.h  TargetSelector.h
autonomous_expl/src/: AutoExplorationApp.cpp  AutoExplorationNode.cpp  DistanceTransformer.cpp  FrontierExtractor.cpp  TargetSelector.cpp
semantic_mapping/: CMakeLists.txt  package.xml
semantic_mapping/include/semantic_mapping/: DangerousAreaRecognition.h  DoorStateChecker.h  MarkerPublisher.h  OpenDoorRecognitionApp.h
semantic_mapping/launch/: start_semantic_expl_real.launch  start_semantic_expl_sim.launch  start_semantic_expl_with_sim.launch  start_semantic_expl_with_sim_rviz_only.launch  start_sim.launch  static_tf.launch
semantic_mapping/src/: DangerousAreaRecognition.cpp  DangerousAreaRecognitionNode.cpp  DoorStateChecker.cpp  Experiments_DangerousAreas_Real.cpp  Experiments_OpenDoors_Real.cpp  Experiments_OpenDoors_Sim.cpp  MarkerPublisher.cpp  MarkerPublisherNode.cpp  OpenDoorRecognitionApp.cpp  OpenDoorRecognitionNode.cpp
semantic_mapping_debug_tools/: CMakeLists.txt  Unbenanntes Dokument  costmap_plugins34.xml  package.xml
semantic_mapping_debug_tools/src/: CloudSaver.cpp  CloudTest.cpp  DoorDetector.cpp  DoorDetector.h  ImageDisplayNode.cpp  PlaneExtractor.cpp  opendoordetector.cpp  opendoordetector.h
semantic_mapping_msgs/: CMakeLists.txt  README.md  package.xml
semantic_mapping_msgs/msg/: DoorMessage.msg
