<?xml version="1.0"?>
<package>
  <name>semantic_mapping_msgs</name>
  <version>1.0.0</version>
  <description>Provides message definitions for semantic_mapping package</description>
  <author>Matej Stanic</author>
  <maintainer email="m.stanic@student.uibk.ac.at">Matej Stanic</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>
  
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  	<cpp cflags="-I${prefix}/msg/cpp"/>
  </export>
</package>
